# BasicPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/app/basicplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/BasicAV/: BasicAV.h  BasicAVDecoder.cpp  BasicAVDecoderPrivate.h  BasicAVFrame.cpp  BasicAVFramePrivate.h  BasicAVPacket.cpp  BasicAVPacketPrivate.h  BasicAVReader.cpp  BasicAVReaderPrivate.h  BasicAVStream.cpp  BasicAVStreamPrivate.h  BasicAVTime.cpp  CMakeLists.txt
app/src/main/cpp/BasicPlayer/: BasicPlayer.cpp  BasicPlayer.h  BasicPlayerController.cpp  BasicPlayerDecoderThread.cpp  BasicPlayerReaderThread.cpp  CMakeLists.txt
app/src/main/cpp/BasicQueue/: BasicQueue.h
app/src/main/cpp/BasicThread/: BasicThread.cpp  BasicThread.h  CMakeLists.txt
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h
app/src/main/java/com/app/basicplayer/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/app/basicplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
